--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ build.log
 .CVS
 .hg*
 
-# output not in target directory
+#SHITTY output not in target directory
 build.log
 
 .cache*
@@ -45,5 +45,3 @@ examples/data/output
 # switch to regexp syntax.
 #  syntax: regexp
 #  ^\.pc/
-
-pom.xml.bkp
