--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -18,12 +18,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>atum-examples</artifactId>
+	<artifactId>atum-examples_2.11</artifactId>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>za.co.absa</groupId>
-		<artifactId>atum-parent</artifactId>
+		<artifactId>atum-parent_2.11</artifactId>
 		<version>3.1.1-SNAPSHOT</version>
 	</parent>
 
